// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Airline: Model representing airlines with basic identification and country of origin.
Airport: Model representing airports with basic information such as name, city, and country.
BaggageClaim: Model representing baggage claim areas at airports with location and capacity details.
Booking: Model representing flight bookings made by customers, including seat type and booking date.
Customer: Model representing customers/passengers with personal contact information.
Flight: Model representing flights, including details about the airline, flight number, and scheduled times.
Cargo: Model representing cargo items loaded on flights with weight and descriptive details.
Gate: Model representing gates at airports where flights embark and disembark.
Lounge: Model representing lounges within airport terminals, including amenities like capacity.
Terminal: Model representing airport terminals with an identifier linked to an airport.
Maintenance: Model representing maintenance activities performed on runways with description and date.
Runway: Model representing airport runways with details like length, width, and surface type.
'''
}

Table Airline {
    id INTEGER [primary key]
    name VARCHAR 
    country_of_origin VARCHAR 
    iata_code VARCHAR 
    icao_code VARCHAR 
    }

Table Airport {
    id INTEGER [primary key]
    name VARCHAR 
    city VARCHAR 
    country VARCHAR 
    iata_code VARCHAR 
    icao_code VARCHAR 
    }

Table BaggageClaim {
    id INTEGER [primary key]
    airport_id INTEGER 
    location VARCHAR 
    capacity INTEGER 
    }

Table Booking {
    id INTEGER [primary key]
    customer_id INTEGER 
    flight_id INTEGER 
    seat_type VARCHAR 
    booking_date DATETIME 
    }

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    phone_number VARCHAR 
    }

Table Flight {
    id INTEGER [primary key]
    airline VARCHAR 
    flight_number VARCHAR 
    origin_airport_id INTEGER 
    destination_airport_id INTEGER 
    departure_time DATETIME 
    arrival_time DATETIME 
    }

Table Cargo {
    id INTEGER [primary key]
    airway_bill_number VARCHAR 
    flight_id INTEGER 
    weight INTEGER 
    description VARCHAR 
    }

Table Gate {
    id INTEGER [primary key]
    airport_id INTEGER 
    gate_number VARCHAR 
    }

Table Lounge {
    id INTEGER [primary key]
    terminal_id INTEGER 
    name VARCHAR 
    capacity INTEGER 
    }

Table Terminal {
    id INTEGER [primary key]
    airport_id INTEGER 
    terminal_number VARCHAR 
    }

Table Maintenance {
    id INTEGER [primary key]
    runway_id INTEGER 
    maintenance_date DATETIME 
    description VARCHAR 
    }

Table Runway {
    id INTEGER [primary key]
    airport_id INTEGER 
    length_ft INTEGER 
    width_ft INTEGER 
    surface VARCHAR 
    }



// Relationships
    Ref: BaggageClaim.(airport_id) < Airport.(id)
    Ref: Booking.(customer_id) < Customer.(id)
    Ref: Booking.(flight_id) < Flight.(id)
    Ref: Flight.(destination_airport_id) < Airport.(id)
    Ref: Flight.(origin_airport_id) < Airport.(id)
    Ref: Cargo.(flight_id) < Flight.(id)
    Ref: Gate.(airport_id) < Airport.(id)
    Ref: Lounge.(terminal_id) < Terminal.(id)
    Ref: Terminal.(airport_id) < Airport.(id)
    Ref: Maintenance.(runway_id) < Runway.(id)
    Ref: Runway.(airport_id) < Airport.(id)
